5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3812/executions/1582_1326.log
== SUBMITION (2019-03-23 14:43:08) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.13134
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:49:50) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.195987
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:49:53) 
-- CODE:
print(40+35
-- ERROR:
File "XXXX", line 2
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:49:56) 
-- CODE:
print(40+35
-- EXECUTION TIME:
0.149651
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 2
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:50:01) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.147504
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:52:39) 
-- CODE:
print(40+35
-- EXECUTION TIME:
0.154894
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 2
    
               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:52:43) 
-- CODE:
print(40+35)
-- EXECUTION TIME:
0.215521
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
